Small fixes to UI and spacings

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -28,7 +28,7 @@
   font-size: clamp(2.5rem, 5vw, 3.5rem);
   font-weight: 800;
   line-height: 1.1;
-  margin-bottom: 1.25rem;
+  margin-bottom: 2rem;
   color: $brand-white;
 }
 
